--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -77,7 +77,7 @@
         </div>
         <div class="row">
             {% for product in products %}
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+            <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4">
                 <div class="card product-card h-100 position-relative">
                     <div class="position-relative overflow-hidden">
                         {% if product.main_image %}
