--- a/core/templates/hybrid_home.html
+++ b/core/templates/hybrid_home.html
@@ -223,7 +223,7 @@
             <a href="#" class="text-primary">عرض الكل</a>
         </div>
         
-        <div class="product-grid">
+        <div class="product-grid mobile-chunked-grid" data-chunk-size="4">
             <div class="product-card">
                 <div class="product-image">
                     <div class="discount-badge">-25%</div>
