--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -75,7 +75,7 @@
         <div class="section-title">
             <h2 class="text-center mb-5">منتجات مميزة</h2>
         </div>
-        <div class="row">
+        <div class="row mobile-chunked-grid" data-chunk-size="4">
             {% for product in products %}
             <div class="col-6 col-sm-6 col-md-4 col-lg-3 mb-4">
                 <div class="card product-card h-100 position-relative">
