--- a/core/templates/products/featured.html
+++ b/core/templates/products/featured.html
@@ -53,7 +53,7 @@
         </div>
         
         {% if products %}
-            <div class="row g-4">
+            <div class="row g-4 mobile-chunked-grid" data-chunk-size="4">
                 {% for product in products %}
                     <div class="col-lg-3 col-md-6">
                         <div class="product-card card h-100 shadow-sm border-0">
