--- a/core/templates/search/results.html
+++ b/core/templates/search/results.html
@@ -95,7 +95,7 @@
 
     {% if products %}
     <h3 class="text-white mb-3">منتجات</h3>
-    <div class="row g-3 mb-4">
+    <div class="row g-3 mb-4 mobile-chunked-grid" data-chunk-size="4">
         {% for product in products %}
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="product-card">
